Build and test this project using Travis CI

--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,5 +1,7 @@
 ---
-- hosts: localhost
+- hosts: 'all'
   remote_user: root
+  become: true
   roles:
-    - docker-plex
+    - 'marvinpinto.docker'
+    - 'ansible-role-docker-plex'
